test/classes/errors/nilability-init-var/init-var-nonnil-borrowed-from-nonnil-shared.chpl
//  lhs: borrowed!  rhs: shared!  ok

class MyClass {
  var x: int;
}

var rhs = new shared MyClass();

var lhs: borrowed MyClass = rhs;


